# testovoe

./: README.md
Testovoe/: CMakeLists.txt
Testovoe/deamon/: CMakeLists.txt  file_logger.cpp  mem_logger.cpp
Testovoe/lib/: CMakeLists.txt  preload.cpp
Testovoe/shared/: CMakeLists.txt  common.h  shared_buffer.cpp  shared_buffer.h
